[gd_scene load_steps=5 format=2]

[ext_resource path="res://Player/StatisticsPlayer.gd" type="Script" id=1]
[ext_resource path="res://slot_full2.png" type="Texture" id=2]
[ext_resource path="res://IconSet_byMaru.png" type="Texture" id=3]
[ext_resource path="res://Player/Camera2D.gd" type="Script" id=4]

[node name="Camera2D" type="Camera2D"]
rotating = true
current = true
zoom = Vector2( 0.75, 0.75 )
script = ExtResource( 4 )

[node name="StatisticsPlayer" type="Control" parent="."]
margin_left = -238.0
margin_top = -148.0
margin_bottom = -120.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="StatisticsPlayer"]
margin_right = 70.0
margin_bottom = 12.0
text = "Lvl = "

[node name="ColorRect" type="ColorRect" parent="StatisticsPlayer/Label"]
modulate = Color( 0, 1, 0, 1 )
self_modulate = Color( 0, 1, 0, 1 )
show_behind_parent = true
margin_left = -1.0
margin_top = -1.0
margin_right = 70.0
margin_bottom = 14.0

[node name="Label2" type="Label" parent="StatisticsPlayer"]
margin_left = 70.0
margin_right = 150.0
margin_bottom = 12.0
text = "HP = "

[node name="ColorRect2" type="ColorRect" parent="StatisticsPlayer/Label2"]
modulate = Color( 1, 0, 0, 1 )
self_modulate = Color( 1, 0, 0, 1 )
show_behind_parent = true
margin_top = -1.0
margin_right = 80.0
margin_bottom = 17.0

[node name="Label4" type="Label" parent="StatisticsPlayer"]
margin_left = 150.0
margin_right = 238.0
margin_bottom = 14.0
text = "Mana="

[node name="ColorRect2" type="ColorRect" parent="StatisticsPlayer/Label4"]
modulate = Color( 0, 0, 1, 1 )
self_modulate = Color( 0, 0, 1, 1 )
show_behind_parent = true
margin_top = -1.0
margin_right = 88.0
margin_bottom = 16.0

[node name="Label3" type="Label" parent="StatisticsPlayer"]
margin_left = 2.0
margin_top = 13.0
margin_right = 150.0
margin_bottom = 29.0
text = "Exp = "

[node name="ColorRect3" type="ColorRect" parent="StatisticsPlayer/Label3"]
modulate = Color( 0.921569, 0.890196, 0.0941176, 1 )
self_modulate = Color( 0.843137, 0.760784, 0.0745098, 1 )
show_behind_parent = true
margin_left = -3.0
margin_top = 1.0
margin_right = 236.0
margin_bottom = 15.0

[node name="BackView" type="Control" parent="."]
margin_left = -232.0
margin_top = 128.0
margin_right = 232.0
margin_bottom = 144.0

[node name="BackContainer" type="GridContainer" parent="BackView"]
margin_right = 464.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="Abilities" type="GridContainer" parent="BackView/BackContainer"]
margin_right = 156.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 5

[node name="Button" type="Button" parent="BackView/BackContainer/Abilities"]
margin_right = 28.0
margin_bottom = 22.0
icon = ExtResource( 2 )
flat = true

[node name="Button2" type="Button" parent="BackView/BackContainer/Abilities"]
margin_left = 32.0
margin_right = 60.0
margin_bottom = 22.0
icon = ExtResource( 2 )
flat = true

[node name="Button3" type="Button" parent="BackView/BackContainer/Abilities"]
margin_left = 64.0
margin_right = 92.0
margin_bottom = 22.0
icon = ExtResource( 2 )
flat = true

[node name="Button4" type="Button" parent="BackView/BackContainer/Abilities"]
margin_left = 96.0
margin_right = 124.0
margin_bottom = 22.0
icon = ExtResource( 2 )
flat = true

[node name="Button5" type="Button" parent="BackView/BackContainer/Abilities"]
margin_left = 128.0
margin_right = 156.0
margin_bottom = 22.0
icon = ExtResource( 2 )
flat = true

[node name="Spells" type="GridContainer" parent="BackView/BackContainer"]
margin_left = 160.0
margin_right = 316.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 5

[node name="FirstSpell" type="Button" parent="BackView/BackContainer/Spells"]
margin_right = 28.0
margin_bottom = 22.0
icon = ExtResource( 2 )
flat = true

[node name="Sprite" type="Sprite" parent="BackView/BackContainer/Spells/FirstSpell"]
position = Vector2( 14, 11 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
hframes = 16
vframes = 6
frame = 16

[node name="SecondSpell" type="Button" parent="BackView/BackContainer/Spells"]
margin_left = 32.0
margin_right = 60.0
margin_bottom = 22.0
icon = ExtResource( 2 )
flat = true

[node name="ThirdSpell" type="Button" parent="BackView/BackContainer/Spells"]
margin_left = 64.0
margin_right = 92.0
margin_bottom = 22.0
icon = ExtResource( 2 )
flat = true

[node name="FourthSpell" type="Button" parent="BackView/BackContainer/Spells"]
margin_left = 96.0
margin_right = 124.0
margin_bottom = 22.0
icon = ExtResource( 2 )
flat = true

[node name="FifthSpell" type="Button" parent="BackView/BackContainer/Spells"]
margin_left = 128.0
margin_right = 156.0
margin_bottom = 22.0
icon = ExtResource( 2 )
flat = true

[node name="Utilities" type="GridContainer" parent="BackView/BackContainer"]
margin_left = 320.0
margin_right = 476.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 5

[node name="Button6" type="Button" parent="BackView/BackContainer/Utilities"]
margin_right = 28.0
margin_bottom = 22.0
icon = ExtResource( 2 )
flat = true

[node name="Button7" type="Button" parent="BackView/BackContainer/Utilities"]
margin_left = 32.0
margin_right = 60.0
margin_bottom = 22.0
icon = ExtResource( 2 )
flat = true

[node name="Button8" type="Button" parent="BackView/BackContainer/Utilities"]
margin_left = 64.0
margin_right = 92.0
margin_bottom = 22.0
icon = ExtResource( 2 )
flat = true

[node name="Button9" type="Button" parent="BackView/BackContainer/Utilities"]
margin_left = 96.0
margin_right = 124.0
margin_bottom = 22.0
icon = ExtResource( 2 )
flat = true

[node name="Button10" type="Button" parent="BackView/BackContainer/Utilities"]
margin_left = 128.0
margin_right = 156.0
margin_bottom = 22.0
icon = ExtResource( 2 )
flat = true

[connection signal="pressed" from="BackView/BackContainer/Spells/FirstSpell" to="." method="_on_FirstSpell_pressed"]
